# toy-assembler

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: count.rs  main.rs  msg.rs
