[package]
name = "toy-assembler"
version = "0.1.0"
authors = ["JX Wang <jxwang92@gmail.com>"]
edition = "2018"

[[bin]]
name = "k-mer-counter"
path = "src/count.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = { version = "0.5"}
fastq = { version = "0.6"}
